updated: destructive color

--- a/frontend/app/styles/globals.css
+++ b/frontend/app/styles/globals.css
@@ -61,7 +61,7 @@
 		--muted: #f5f5f5;
 		--muted-foreground: #737373;
 
-		--destructive: #f37055;
+		--destructive: #ed6a5e;
 		--destructive-foreground: #fcfcfc;
 
 		--border: #e5e5e5;
@@ -122,7 +122,7 @@
 		--muted: #4f4f4f;
 		--muted-foreground: #b3b3b3;
 
-		--destructive: #4d1a1f;
+		--destructive: #752422;
 		--destructive-foreground: #fcfcfc;
 
 		--border: #262626;
