updated: accent color

--- a/frontend/app/styles/globals.css
+++ b/frontend/app/styles/globals.css
@@ -46,7 +46,7 @@
 		--secondary-400: #fd6c6c;
 		--secondary-foreground: #181818;
 
-		--accent: #f5f5f5;
+		--accent: #dcdcdc;
 		--accent-foreground: #171717;
 
 		--red-color: #ed6a5e;
